--- a/jquery.fancybox/jquery.fancybox.mod_shortcat.css
+++ b/jquery.fancybox/jquery.fancybox.mod_shortcat.css
@@ -1,3 +1,5 @@
+
+
 /* === Overlay === */
 
 div#fancy_overlay {
@@ -7,6 +9,12 @@ div#fancy_overlay {
 	z-index: 30;
 	width: 100%;
 	background-color: #333;
+}
+
+/* === Outer box === */
+
+div#fancy_outer {
+  position: absolute;
 }
 
 /* === Loading box === */
@@ -39,6 +47,7 @@ div#fancy_close {
   display: none;
   height: 37px;
   position: fixed;
+  position: _absolute;
   right: 22px;
   top: 24px;
   width: 37px;
@@ -53,6 +62,7 @@ div#fancy_close:hover {
 
 div#fancy_title {
 	position: fixed;
+	position: _absolute;
 	top: 24px;
 	left: 22px;
 	width: auto;
@@ -109,13 +119,15 @@ div#fancy_inner {
 a#fancy_left, 
 a#fancy_right {
 	position: fixed; 
-	display: block;
+  position: _absolute;	
+	display: none;
 	bottom: 0px; 
 	height: 100%; 
 	width: 35%; 
 	cursor: pointer;
 	background-image: url(data:image/gif;base64,AAAA);
 	z-index: 598; 
+	
 }
 
 a#fancy_left {
