--- a/jquery.fancybox.mod_shortcat/jquery.fancybox-1.3.1.css
+++ b/jquery.fancybox.mod_shortcat/jquery.fancybox-1.3.1.css
@@ -14,6 +14,11 @@
  *   http://www.gnu.org/licenses/gpl.html
  */
 
+/* Do not show scrollbars when FB is open */
+body.fancybox-active {
+   overflow: hidden;
+}
+
 #fancybox-loading {
 	position: fixed;
 	top: 50%;
